# evil-engine

./: CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp
test/: CMakeLists.txt
test/source/: evil-engine_test.cpp
